@@ -46,16 +46,31 @@ import javax.xml.parsers.ParserConfigurationException;
 import javax.xml.transform.*;
 import javax.xml.transform.dom.DOMSource;
 import javax.xml.transform.stream.StreamResult;
-import java.io.ByteArrayInputStream;
-import java.io.IOException;
-import java.io.InputStream;
-import java.io.StringWriter;
+import org.apache.xpath.XPathAPI;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
+import org.w3c.dom.*;
+import org.xml.sax.SAXException;
+
+import javax.xml.XMLConstants;
+import javax.xml.parsers.DocumentBuilderFactory;
+import javax.xml.parsers.ParserConfigurationException;
+import javax.xml.transform.*;
+import javax.xml.transform.dom.DOMSource;
+import javax.xml.transform.stream.StreamResult;
+import java.io.*;
 import java.net.HttpURLConnection;
+import java.net.URI;
 import java.net.URL;
+import java.nio.charset.StandardCharsets;
 import java.time.Instant;
+import java.util.concurrent.TimeUnit;
+import java.util.stream.Collectors;
 import java.util.zip.GZIPInputStream;
 import java.util.zip.InflaterInputStream;
 import java.util.zip.ZipInputStream;
+
+import static java.net.HttpURLConnection.HTTP_UNAVAILABLE;
 
 /**
  * HarvesterVerb is the parent class for each of the OAI verbs.
@@ -67,7 +82,6 @@ public abstract class HarvesterVerb
 
 	// Constants used by the HTTP client
 	private static final String RETRY_AFTER = "Retry-After";
-	private static final String LOCATION = "Location";
 
 	// Logger
 	private static final Logger log = LoggerFactory.getLogger( HarvesterVerb.class );
@@ -84,6 +98,24 @@ public abstract class HarvesterVerb
 	private static final Element namespaceElement;
 	private static final DocumentBuilderFactory factory;
 	private static final TransformerFactory xformFactory = TransformerFactory.newInstance();
+
+	/**
+	 * A node list that is always empty.
+	 */
+	public static final NodeList EMPTY_NODE_LIST = new NodeList()
+	{
+		@Override
+		public Node item( int index )
+		{
+			return null;
+		}
+
+		@Override
+		public int getLength()
+		{
+			return 0;
+		}
+	};
 
 	static
 	{
@@ -115,7 +147,7 @@ public abstract class HarvesterVerb
 			namespaceElement.setAttributeNS( XMLConstants.XMLNS_ATTRIBUTE_NS_URI, "xmlns:oai11_ListSets",
 					"http://www.openarchives.org/OAI/1.1/OAI_ListSets" );
 		}
-		catch (ParserConfigurationException e)
+		catch ( ParserConfigurationException e )
 		{
 			throw new IllegalStateException( e );
 		}
@@ -124,19 +156,18 @@ public abstract class HarvesterVerb
 	// Instance variables
 	private final Document doc;
 	private final String schemaLocation;
-	private final String requestURL;
+	private final URI requestURL;
 
 	/**
-	 * Performs the OAI request
+	 * Performs the OAI request with the default timeout of 10 seconds.
 	 *
-	 * @param requestURL
+	 * @param requestURL the URL to request
 	 * @throws IOException
 	 * @throws SAXException
-	 * @throws TransformerException
 	 */
-	public HarvesterVerb( String requestURL ) throws IOException, SAXException, TransformerException
+	protected HarvesterVerb( String requestURL ) throws IOException, SAXException
 	{
-		this( requestURL, 2 );
+		this( requestURL, 10 );
 	}
 
 	/**
@@ -145,34 +176,43 @@ public abstract class HarvesterVerb
 	 * @param requestURL
 	 * @throws IOException
 	 * @throws SAXException
-	 * @throws TransformerException
 	 */
-	public HarvesterVerb( String requestURL, Integer timeout ) throws IOException, SAXException, TransformerException
+	protected HarvesterVerb( String requestURL, int timeout ) throws IOException, SAXException
 	{
-		this.requestURL = requestURL;
+		this.requestURL = URI.create( requestURL );
 
-		try ( InputStream in = getHttpResponse( new URL( requestURL ), timeout ) )
+		try ( InputStream in = getHttpResponse( this.requestURL.toURL(), timeout ) )
 		{
 			doc = factory.newDocumentBuilder().parse( in );
 		}
-		catch (ParserConfigurationException e)
+		catch ( ParserConfigurationException e )
 		{
 			throw new IllegalStateException( e );
 		}
 
-		this.schemaLocation = getSingleString( "/*/@xsi:schemaLocation" );
+		String schemaLocationTemp;
+		try
+		{
+			schemaLocationTemp = getSingleString( "/*/@xsi:schemaLocation" );
+		}
+		catch ( TransformerException e )
+		{
+			schemaLocationTemp = "";
+		}
+		this.schemaLocation = schemaLocationTemp;
 	}
 
-	private static InputStream getHttpResponse( URL requestURL, Integer timeout ) throws IOException
+	private static InputStream getHttpResponse( URL requestURL, int timeout ) throws IOException
 	{
 		HttpURLConnection con;
 		int responseCode;
 		int retries = 0;
-		do
+
+		while ( true )
 		{
 			con = (HttpURLConnection) requestURL.openConnection();
 			con.setRequestProperty( "User-Agent", "OAIHarvester/2.0" );
-			con.setRequestProperty( "Accept-Encoding", "compress, gzip, identify" );
+			con.setRequestProperty( "Accept-Encoding", "compress, gzip, identity" );
 
 			// TK added default timeout for dataverses taking too long to respond / stall
 			log.trace( "Timeout : {} seconds", timeout );
@@ -182,15 +222,7 @@ public abstract class HarvesterVerb
 			responseCode = con.getResponseCode();
 			log.trace( "responseCode={}", responseCode );
 
-			if ( responseCode == 302 )
-			{
-				if ( log.isInfoEnabled() )
-					log.info( con.getHeaderFields().toString() );
-				con.getHeaderFields().get( LOCATION ).forEach( log::info );
-				return getHttpResponse( new URL( con.getHeaderFields().get( LOCATION ).get( 0 ) ), timeout );
-			}
-
-			if ( responseCode == HttpURLConnection.HTTP_UNAVAILABLE )
+			if ( responseCode == HTTP_UNAVAILABLE && retries++ < 3 )
 			{
 				long retrySeconds = con.getHeaderFieldInt( RETRY_AFTER, -1 );
 				if ( retrySeconds == -1 )
@@ -201,20 +233,48 @@ public abstract class HarvesterVerb
 				}
 				if ( retrySeconds > 0 )
 				{
-					log.debug( "Server response: Retry-After={}", retrySeconds );
+					log.debug( "Server response: Retry-After={}", con.getHeaderField( RETRY_AFTER ) );
 					try
 					{
-						Thread.sleep( retrySeconds * 1000 );
+						TimeUnit.SECONDS.sleep( 1 );
 					}
-					catch (InterruptedException ex)
+					catch ( InterruptedException ex )
 					{
 						Thread.currentThread().interrupt();
 						return new ByteArrayInputStream( new byte[0] );
 					}
 				}
 			}
-		} while (responseCode == HttpURLConnection.HTTP_UNAVAILABLE && retries++ < 3);
+			else
+			{
+				break;
+			}
+		}
+
+		if ( responseCode >= 400 )
+		{
+			throw handleHTTPResponseErrors( con, responseCode );
+		}
+
 		return decodeHttpInputStream( con );
+	}
+
+	private static IOException handleHTTPResponseErrors( HttpURLConnection con, int responseCode )
+	{
+		IOException exception;
+		try ( BufferedReader reader = new BufferedReader( new InputStreamReader( decodeHttpInputStream( con ), StandardCharsets.UTF_8 ) ) )
+		{
+			exception = new IOException( String.format( "Server returned %d, body: %s",
+					responseCode,
+					reader.lines().collect( Collectors.joining( System.lineSeparator() ) )
+			) );
+		}
+		catch ( IOException e )
+		{
+			// Make sure the response code is not lost if an IO error occurs
+			exception = new IOException( String.format( "Server returned %d", responseCode ), e );
+		}
+		return exception;
 	}
 
 	/**
@@ -239,19 +299,25 @@ public abstract class HarvesterVerb
 
 	/**
 	 * Get the OAI errors
-	 * 
+	 *
 	 * @return a NodeList of /oai:OAI-PMH/oai:error elements
-	 * @throws TransformerException
 	 */
-	public NodeList getErrors() throws TransformerException
+	public NodeList getErrors()
 	{
-		if ( SCHEMA_LOCATION_V2_0.equals( getSchemaLocation() ) )
+		try
 		{
-			return getNodeList( "/oai20:OAI-PMH/oai20:error" );
+			if ( SCHEMA_LOCATION_V2_0.equals( getSchemaLocation() ) )
+			{
+				return XPathAPI.selectNodeList( getDocument(), "/oai20:OAI-PMH/oai20:error", namespaceElement );
+			}
+			else
+			{
+				return EMPTY_NODE_LIST;
+			}
 		}
-		else
+		catch ( TransformerException e )
 		{
-			return null;
+			throw new IllegalStateException( e );
 		}
 	}
 
@@ -260,7 +326,7 @@ public abstract class HarvesterVerb
 	 *
 	 * @return the OAI request URL as a String
 	 */
-	public String getRequestURL()
+	public URI getRequestURL()
 	{
 		return requestURL;
 	}
@@ -270,53 +336,46 @@ public abstract class HarvesterVerb
 		String contentEncoding = con.getHeaderField( "Content-Encoding" );
 		log.trace( "contentEncoding={}", contentEncoding );
 
-		if ( contentEncoding == null )
+		final InputStream inputStream;
+		if ( con.getResponseCode() < 400 )
 		{
-			contentEncoding = "";
+			inputStream = con.getInputStream();
+		}
+		else
+		{
+			inputStream = con.getErrorStream();
 		}
 
-		switch (contentEncoding)
+		if ( contentEncoding == null )
 		{
-		case "compress":
-			ZipInputStream zis = new ZipInputStream( con.getInputStream() );
-			zis.getNextEntry();
-			return zis;
-		case "gzip":
-			return new GZIPInputStream( con.getInputStream() );
-		case "deflate":
-			return new InflaterInputStream( con.getInputStream() );
-		default:
-			return con.getInputStream();
+			return inputStream;
+		}
+
+		switch ( contentEncoding )
+		{
+			case "compress":
+				ZipInputStream zis = new ZipInputStream( inputStream );
+				zis.getNextEntry();
+				return zis;
+			case "gzip":
+				return new GZIPInputStream( inputStream );
+			case "deflate":
+				return new InflaterInputStream( inputStream );
+			default:
+				return inputStream;
 		}
 	}
 
 	/**
 	 * Get the String value for the given XPath location in the response DOM
 	 *
-	 * @param xpath
+	 * @param xpath the XPath to evaluate.
 	 * @return a String containing the value of the XPath location.
-	 * @throws TransformerException
+	 * @throws TransformerException if an error occurs getting the XPath location
 	 */
 	public String getSingleString( String xpath ) throws TransformerException
 	{
-		return getSingleString( getDocument(), xpath );
-	}
-
-	public String getSingleString( Node node, String xpath ) throws TransformerException
-	{
-		return XPathAPI.eval( node, xpath, namespaceElement ).str();
-	}
-
-	/**
-	 * Get a NodeList containing the nodes in the response DOM for the specified xpath
-	 *
-	 * @param xpath
-	 * @return the NodeList for the xpath into the response DOM
-	 * @throws TransformerException
-	 */
-	public NodeList getNodeList( String xpath ) throws TransformerException
-	{
-		return XPathAPI.selectNodeList( getDocument(), xpath, namespaceElement );
+		return XPathAPI.eval( getDocument(), xpath, namespaceElement ).str();
 	}
 
 	public String toString()
